# drf-omtir-flight-recorder

./: .gitignore  MILESTONE_CERTIFICATE_MCP_FLIGHT_RECORDER_v0.1.md  QUICKSTART_TRANSCRIPT_v0.1.md  README.md  TOOL_IDENTITY_MANIFEST_HARDENING.md  drf-omtir.yaml  pyproject.toml  regenerate_receipt.py  remote_mcp_probe_v0_3_0.py  remote_mcp_probe_v0_3_1.py
docs/: AUDIT_ADDENDUM_POST_AUDIT_HARDENING_CHECKPOINT.md  BOUNDARY_STATEMENT_v0.1.md  DEMO_SCRIPT_3_MINUTES_v0.1.md  DEVHUNT_SUBMISSION_COPY_v0.1.md  DRF_OMTIR_EVIDENCE_LEDGER_v0.1.md  DRF_OMTIR_EXTERNAL_TECHNICAL_BRIEF_v0.1.md  FROZEN_ARTIFACT_HASH_TABLE_v0.1.md  GITHUB_MCP_TOOL_INVENTORY_v0_1.md  ONE_PAGE_EXECUTIVE_SUMMARY_v0.1.md  PRODUCT_HUNT_TEASER_COPY_v0.1.md  SHOW_HN_POST_v0.1.md  TERMINAL_DEMO_SCRIPT_90_SECONDS_v0.1.md  TRUEFOUNDRY_REAL_MCP_GOVERNANCE_CONTACT_PROOF_v0.1.8.md
examples/: demo-search-logs-result.json  resilient-demo-quarantined-tool-result.json  resilient-demo-search-logs-result.json
outputs/: remote-mcp-full-chain-export-response-v0.3.1.json  remote-mcp-probe-export-response-v0.3.0.json  signal-ingest-export-response-v0.2.1.json
policy/: example-policy.yaml  github-flat-policy-v0.1.yaml
receipts/: demo-trust-receipt.md  live-proposal-demo-trust-receipt.md  manual-demo-trust-receipt.md  remote-mcp-full-chain-v0.3.1-trust-receipt.md  remote-mcp-probe-v0.3.0-trust-receipt.md  resilient-demo-trust-receipt.md  signal-ingest-mcp-v0.2.1-trust-receipt.md  truefoundry-real-mcp-v0.2.0-trust-receipt.md
reports/: demo-verifier-report.json  live-proposal-demo-verifier-report.json  (+3 more)
wal/: demo.jsonl  (+11 more)
(+56 files in other folders)
