[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-omtir-flight-recorder"
version = "0.1.3"
description = "Local MCP governance proxy and Trust Receipt generator for tool-using AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "DRF + OMTIR Project" }]

[project.scripts]
drf-omtir = "drf_omtir_flight_recorder.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
